Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetundefined.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, undefined> yoda
        undefined ret = yoda:useForce(one, two)
        output "passed"
     end
end
