Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriBooleanRetbooleanFail.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
